fixed overlaping section issue

--- a/learning/htmlCssProjects/omnifood/resources/css/styles.css
+++ b/learning/htmlCssProjects/omnifood/resources/css/styles.css
@@ -50,7 +50,8 @@ html {
    background-color: orange;
 }
 .clearfix {zoom: 1}
-.clearfix:after {
+.clearfix:after,
+.clearfix:before {
    content: '.';
    clear: both;
    display: block;
@@ -445,9 +446,8 @@ header {
    color: #fff;
    display: block;
    /* height: 120vh; */
-   margin-top: 50px;
-   padding-bottom: 80px;
-   margin: -80px 0 0 0;
+   /* margin-top: 50px; */
+   padding-bottom: 30px;
    background-image: linear-gradient(rgba(0,0,0,0.70), rgba(0,0,0,0.70)), url(img/back-customers.jpg);
    background-size: cover;
    background-attachment: fixed;
